--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#layout {
+  min-height: 100vh;
+  max-width: 100%;
+  margin: 0;
+  background-color: #F0F4F8;
+  padding: 25px 25px 50px 25px;
+}
