--- a/client/src/Components/ItemCard/ItemCard.css
+++ b/client/src/Components/ItemCard/ItemCard.css
@@ -2,8 +2,8 @@
     text-transform: uppercase;
     color:#264653;
     text-align:center; 
+    height: 60px ;
     display: flex ;
-    padding-top: 10px;
     justify-content: center;
     align-items: flex-end;
 }
