--- a/client/src/Pages/InstructionPage/InstructionPage.css
+++ b/client/src/Pages/InstructionPage/InstructionPage.css
@@ -12,6 +12,7 @@
 
 .instruction {
     position: absolute;
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
