--- a/client/src/Format.css
+++ b/client/src/Format.css
@@ -16,3 +16,18 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.flexStart {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.flexEnd {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.flexColumn {
+    display: flex;
+    flex-direction: column;
+}
