--- a/client/src/Components/SummaryCard/SummaryCard.css
+++ b/client/src/Components/SummaryCard/SummaryCard.css
@@ -1,8 +1,3 @@
-.summaryText {
-    color:#264653;
-    font-size: 14px;
-}
-
 .summaryText.MuiTypography-root {
     color:#264653;
     font-size: 14px;
@@ -15,4 +10,10 @@
 
 .summaryVariable.MuiTypography-root{
     font-size: 14px;
+}
+
+.summaryHeader.MuiTypography-root {
+    color:#264653;
+    font-size: 16px;
+    font-weight: bold;
 }
