--- a/client/src/Format.css
+++ b/client/src/Format.css
@@ -32,3 +32,26 @@
     display: flex;
     flex-direction: column;
 }
+
+.absoluteCenter {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Text */
+.textCenter.MuiTypography-root {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 14px;
+}
+
+.formCardHeader.MuiTypography-root {
+    letter-spacing: 2px;
+    font-weight: bolder;
+    margin-bottom: 24px;
+    margin-top: 8px;
+}
