amended template 1 & details form

--- a/client/src/Components/ProjectForm/ProjectForm.css
+++ b/client/src/Components/ProjectForm/ProjectForm.css
@@ -38,7 +38,7 @@
 .accordionSummary.MuiAccordionSummary-root {
     background-color: #E6E6E6;
     color: #6A6A6A;
-    border: solid 1px #C8CCCF
+    border: solid 1px #C8CCCF;
 }
 
 /* Card */
