--- a/client/src/Components/SummaryCard/SummaryCard.css
+++ b/client/src/Components/SummaryCard/SummaryCard.css
@@ -22,3 +22,9 @@
   font-size: 16px;
   font-weight: bold;
 }
+
+.summaryRole.MuiTypography-root {
+  color: #C59D5F;
+  font-size: 16px;
+  font-weight: bold;
+}
